# httpx-retry-client

./: README.md  pyproject.toml
retry_client/: __init__.py  backoff.py  circuit_breaker.py  client.py  config.py  logging_utils.py  policy.py  retry_after.py  timeouts.py
tests/: test_backoff.py  test_circuit_breaker.py  test_client_integration.py  test_config.py  test_mock_server.py  test_policy.py  test_retry_after.py
