[project]
name = "httpx-retry-client"
version = "0.1.0"
description = "httpx için jitter'lı exponential backoff ve idempotent retry destekli güvenilir HTTP istemci sarmalayıcısı."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
